# acme-adcs-ra

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
deploy/iis/: README.md  web.config
docs/: architecture.md  certsrv-setup.md  live-reproof-runbook.md  operations.md  pre-pilot-checklist.md  revocation-scope-validation.md  spike-runbook.md  threat-model.md
lab/: spike_mode_a.py
plans/: 001-spike-and-mvp.md  002-pilot-readiness.md  003-post-pilot-hardening.md  004-automated-revocation-spike.md  005-v1.5-feature-complete.md  006-one-identity-revocation.md  007-v1.6-hardening-sweep.md
reflections/: 2026-06-20-nemotron-3-ultra.md  2026-06-24-glm-5-2-2.md  2026-06-24-glm-5-2-3.md  2026-06-24-glm-5-2-4.md  2026-06-24-glm-5-2.md  2026-06-30-glm-5-2.md  2026-07-05-glm-5-2.md  2026-07-06-kimi-k2-7.md  2026-07-14-glm-5-2.md  2026-07-23-qwen3-8-max-preview.md
scripts/: Get-OfficerRights.ps1  Reconcile-Revocation.ps1  Register-MaintenanceTasks.ps1  Revoke-Cert.ps1  Set-OfficerRights.ps1  Sync-Revocations.ps1  Verify-TemplateEnrollment.ps1  check_committed_identifiers.py  eab.py  install-windows.ps1  reconcile_revocation.py
scripts/lib/: OfficerRightsLib.ps1  RevocationLib.ps1  SyncLib.ps1  TaskActionLib.ps1
src/acme_adcs_ra/: __init__.py  __main__.py  acme_errors.py  app_state.py  config.py  csr_validation.py  enrollment.py  finalize.py  jws.py  negotiate_auth.py  policy.py  revocation.py  serializers.py  server.py  server_jws.py  siem.py  store.py
src/acme_adcs_ra/fixtures/: __init__.py  fake_cert.pem  fake_chain.pem
src/acme_adcs_ra/routes/: accounts.py  acme.py  admin.py  authorizations.py  certificates.py  directory.py  key_change.py  orders.py  revocation.py
tests/: hand_rolled_acme_client.py  test_acme_server.py  test_chain_parsing.py  test_check_identifiers.py  test_config.py  test_eab.py  test_enrollment.py  test_finalize_eku_verification.py  test_finalize_san_verification.py  test_jws.py  test_key_change.py  test_negotiate_auth.py  test_policy.py  test_rate_limiting.py  test_reconciliation.py  test_revocation.py  test_siem.py
tests/architecture/: test_no_signing_dependencies.py  test_no_signing_key.py  test_wheel_artifacts.py
tests/fixtures/certfnsh/: denied_real.html  issued_real.html  pending_real.html  pending_synthetic.html
tests/pester/: OfficerRights.Tests.ps1  Revocation.Tests.ps1  Sync.Tests.ps1  TaskAction.Tests.ps1
