[project]
name = "acme-adcs-ra"
version = "1.5.0"
description = "ACME Registration Authority for ADCS — speaks ACME, holds no signing key, enrolls via /certsrv/ as a gMSA"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "cryptography",       # CSR parsing, JWS verification
    "pydantic",
    "pydantic-settings",  # env-var / config-file loading
    "requests",           # ADCS /certsrv/ HTTP client + the Negotiate auth handler
    # SPNEGO/Negotiate with channel binding (EPA=Require) as the ambient gMSA.
    # Windows-only (SSPI via sspilib); platform-gated so Linux CI is unaffected.
    "pyspnego; sys_platform == 'win32'",
]

[project.scripts]
acme-adcs-ra = "acme_adcs_ra.__main__:main"

[project.optional-dependencies]
# ruff and mypy are pinned in pyproject.toml AND locked in uv.lock: CI
# installs via `uv sync --locked`, so the lockfile is the single source of
# truth at install time. The pins here keep `uv lock` deterministic; bump
# them deliberately (the monthly rot-canary surfaces when a bump is due).
dev = ["pytest", "httpx", "ruff==0.15.17", "mypy==2.1.0", "types-requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acme_adcs_ra"]
# Fixture PEMs are tracked via .gitignore exceptions (!src/acme_adcs_ra/fixtures/*.pem)
# and forced into the wheel via the artifacts key below.
artifacts = ["src/acme_adcs_ra/fixtures/*.pem"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
mypy_path = "src"
